# pyper

./: Cargo.toml  README.md
example/: index.php
fastcgi-client/: Cargo.toml
fastcgi-client/src/: params.rs
fastcgi-client/tests/: client_get.rs  client_multi.rs  client_post.rs
fastcgi-client/tests/php/: index.php
server/: Cargo.toml
server/src/: client.rs  main.rs  manager.rs  request.rs  response.rs  service.rs
src/: client.rs  main.rs  manager.rs  request.rs  response.rs
