[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
fastcgi-client = { path = "../fastcgi-client" }

async-trait = "0.1.83"
bb8 = "0.8.5"
futures = "0.3.31"
http = "1.1.0"
http-body-util = "0.1.2"
httparse = "1.9.5"
hyper = { version = "1.4.1", features = ["full", "http1", "http2", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio", "http2"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.20", features = ["derive"] }
hyper-staticfile = "0.10.1"
